# competitive-fps

./: .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-PICHULIRU-ASSETS.txt  README.md
compegodot/: .gitattributes  .gitignore  CameraSmoothPhysics.gd  Cargo.toml  LLInput.gd  PhysicsRenderSmooth.gd  Player.gd  Player.tscn  README.md  ScoreDatabase.gdns  TestLevel.tscn  VolumetricSky.gd  compegodot_library.gdnlib  compegodot_library.gdnlib.release  config.gd  default.nix  default_audio_bus_layout.tres  default_env.tres  export_presets.cfg  game_mode.gd  global.gd  llinput.gd  middlescreen.gd  project.godot  score.gd  state.gd  util.gd
compegodot/.import/: Pistol_Compact_West.glb-dcc8e9077f44b55a32f779dd37cdf29d.md5  Pistol_Compact_West.glb-dcc8e9077f44b55a32f779dd37cdf29d.scn  Pistol_Compact_West.obj-f41eb3d71a17fa4a43153441f21e42ba.md5  Pistol_Compact_West.obj-f41eb3d71a17fa4a43153441f21e42ba.mesh  Pistol_Full_West.glb-b755b4a99ca6938621a19e9d327af018.md5  Pistol_Full_West.glb-b755b4a99ca6938621a19e9d327af018.scn  Pistol_Full_West.obj-b23650d8823e7ad3a08f42c3bb5a798f.md5  Pistol_Full_West.obj-b23650d8823e7ad3a08f42c3bb5a798f.mesh  Rifle_Assault_West.glb-8e7e4c2d6d23da4e577fe7b85e5d5404.md5  Rifle_Assault_West.glb-8e7e4c2d6d23da4e577fe7b85e5d5404.scn  Rifle_Assault_West.obj-18aac45855d22593fffbef65ca405777.md5  Rifle_Assault_West.obj-18aac45855d22593fffbef65ca405777.mesh  Rifle_Battle_West.glb-f53a33b007b907951c2ef153767c0c69.md5  Rifle_Battle_West.glb-f53a33b007b907951c2ef153767c0c69.scn  SMG_Compact_West.glb-3ddab2a8eff295a79ee025cbc0a832d0.md5  (+222 more)
(+502 files in other folders)
