[package]
name = "compegodot"
version = "0.0.1"
authors = ["tengkuizdihar"]
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.9.3"
sled = "0.34.6"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } 
thiserror = "1.0.25"